--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:fitsSystemWindows="true"
-    tools:context=".ResetPasswordActivity"
+    tools:context=".activity.ResetPasswordActivity"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
