--- a/app/src/main/res/layout/content_schemes.xml
+++ b/app/src/main/res/layout/content_schemes.xml
@@ -8,4 +8,15 @@
     tools:context=".activity.SchemesActivity"
     tools:showIn="@layout/app_bar_schemes">
 
+
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+
 </android.support.constraint.ConstraintLayout>
