--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
+    tools:context=".activity.LoginAcitivity"
     android:orientation="vertical">
 
     <LinearLayout
@@ -39,7 +39,7 @@
                  android:orientation="vertical">
 -->
 
-        <android.support.design.widget.TextInputEditText
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -54,7 +54,7 @@
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
                 android:backgroundTint="@color/colorAccent"/>
-        </android.support.design.widget.TextInputEditText>
+        </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
