--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="holoSpinner" parent="Widget.AppCompat.Spinner.Underlined">
+    <item name="colorPrimary">@color/colorPrimary</item>
+    </style>
+
 </resources>
