--- a/app/src/main/res/layout/activity_list_of_schemes.xml
+++ b/app/src/main/res/layout/activity_list_of_schemes.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ListOfSchemesActivity">
+    tools:context=".activity.ListOfSchemesActivity"
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
 
-    <android.support.v7.widget.Toolbar
+        <android.support.v7.widget.Toolbar
         app:titleTextColor="#ffffff"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -25,4 +25,4 @@
 
 <include layout="@layout/content_list_of_schemes"/>
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
