--- a/app/src/main/res/layout/activity_list_of_schemes.xml
+++ b/app/src/main/res/layout/activity_list_of_schemes.xml
@@ -19,6 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:layout_collapseMode="pin"
+            app:navigationIcon="@drawable/ic_arrow_back_white_18dp"
+
+
         />
 
     </android.support.design.widget.AppBarLayout>
