--- a/app/src/main/res/layout/content_list_of_schemes.xml
+++ b/app/src/main/res/layout/content_list_of_schemes.xml
@@ -35,7 +35,15 @@
         >
 
     </Spinner>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorPrimary"/>
         </LinearLayout>
+
+
+
 
         <LinearLayout
             android:layout_width="0dp"
@@ -60,6 +68,11 @@
                 >
 
             </Spinner>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorPrimary"/>
         </LinearLayout>
 
         <LinearLayout
@@ -85,9 +98,16 @@
                 >
 
             </Spinner>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorPrimary"/>
         </LinearLayout>
 
     </LinearLayout>
+
+
 
     <android.support.v7.widget.RecyclerView
         android:layout_marginTop="15dp"
