--- a/app/src/main/res/layout/scheme_row_layout.xml
+++ b/app/src/main/res/layout/scheme_row_layout.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="320dp"
     android:elevation="7dp"
     app:cardCornerRadius="6dp"
     android:id="@+id/cardview"
@@ -136,7 +136,20 @@
                         android:layout_marginLeft="7dp"/>
 
                 </LinearLayout>
+
+
+
+
             </LinearLayout>
+            <TextView
+                android:id="@+id/viewdetails"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="View Details >>"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"
+                android:textSize="14dp"/>
 
 
     </LinearLayout>
