--- a/app/src/main/res/layout/activity_send_query.xml
+++ b/app/src/main/res/layout/activity_send_query.xml
@@ -7,7 +7,7 @@
     tools:context=".activity.SchemeDetailActivity"
     android:orientation="vertical">
 
-    <!--<android.support.design.widget.AppBarLayout
+    <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
 
             />
 
-    </android.support.design.widget.AppBarLayout>-->
+    </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
