--- a/app/src/main/res/layout/card_items.xml
+++ b/app/src/main/res/layout/card_items.xml
@@ -4,51 +4,55 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
-    <LinearLayout
-        android:id="@+id/root"
+<LinearLayout
+    android:id="@+id/root"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    <android.support.v7.widget.CardView
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <android.support.v7.widget.CardView
-            android:layout_height="wrap_content"
+        android:layout_margin="10dp">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_margin="10dp"
             android:layout_width="match_parent"
-            android:layout_margin="10dp">
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_margin="10dp"
+            android:layout_height="wrap_content"
+            >
+            <TextView
+                android:id="@+id/post_title_txtview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
-                <TextView
-                    android:id="@+id/post_title_txtview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:textColor="#000"
-                    android:textStyle="bold"
-                    android:text="Post Title"/>
-                <TextView
-                    android:id="@+id/post_desc_txtview"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_margin="5dp"
-                    android:text="Post Description"/>
-                <TextView
-                    android:id="@+id/post_user"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:text="Kenny"
-                    android:textSize="15sp"
-                    android:fontFamily="serif"
-                    android:gravity="end"
-                    android:textStyle="bold"
-                    android:textColor="#FF07B618"/>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-    </LinearLayout>
-
+                android:layout_margin="5dp"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:text="Post Title"/>
+            <TextView
+                android:id="@+id/post_desc_txtview"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="5dp"
+                android:text="Post Description"/>
+            <TextView
+                android:id="@+id/post_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Post ID"
+                android:gravity="end"/>
+            <TextView
+                android:id="@+id/post_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Kenny"
+                android:textSize="15sp"
+                android:fontFamily="serif"
+                android:gravity="end"
+                android:textStyle="bold"
+                android:textColor="#FF07B618"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
 
 </LinearLayout>
