--- a/app/src/main/res/layout/card_items.xml
+++ b/app/src/main/res/layout/card_items.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     >
 <LinearLayout
@@ -11,7 +11,7 @@
     android:orientation="vertical">
     <android.support.v7.widget.CardView
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_margin="10dp">
         <LinearLayout
             android:orientation="vertical"
@@ -33,25 +33,103 @@
                 android:layout_height="50dp"
                 android:layout_margin="5dp"
                 android:text="Post Description"/>
-            <TextView
-                android:id="@+id/post_id"
-                android:layout_width="match_parent"
+
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Post ID"
-                android:gravity="end"/>
-            <TextView
-                android:id="@+id/post_user"
-                android:layout_width="match_parent"
+                android:padding="16dp"
+                android:layout_gravity="end"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/post_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="Post ID : -"
+                    android:textSize="15sp"
+                    android:gravity="end"/>
+                <TextView
+                    android:id="@+id/post_user"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="Kenny"
+                    android:textSize="15sp"
+                    android:fontFamily="serif"
+                    android:gravity="end"
+                    android:textStyle="bold"
+                    android:textColor="#FF07B618"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Kenny"
-                android:textSize="15sp"
-                android:fontFamily="serif"
-                android:gravity="end"
-                android:textStyle="bold"
-                android:textColor="#FF07B618"/>
+                android:padding="16dp"
+                android:layout_gravity="end"
+                android:orientation="horizontal">
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/like"
+                        android:layout_margin="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_thumb_up_black_24dp"/>
+                    <TextView
+                        android:id="@+id/text_like"
+                        android:textSize="18sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:layout_margin="5dp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/comment"
+                        android:layout_margin="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_comment_black_24dp"/>
+                    <TextView
+                        android:id="@+id/text_comment"
+                        android:textSize="18sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:layout_margin="5dp"/>
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/comment_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <include layout="@layout/content_comment"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/commentbox"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/edit_comment"
+                    android:layout_width="280dp"
+                    android:layout_height="60dp"
+                    android:hint="Type comment here"/>
+                <ImageView
+                    android:layout_margin="5dp"
+                    android:id="@+id/send_comment"
+                    android:layout_width="28dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_send_black_24dp"/>
+            </LinearLayout>
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 </LinearLayout>
 
