--- a/app/src/main/res/layout/content_blog.xml
+++ b/app/src/main/res/layout/content_blog.xml
@@ -8,10 +8,11 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activity.BlogActivity"
     tools:showIn="@layout/activity_blog">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-</android.support.v7.widget.RecyclerView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
